--- a/src/components/AddShoutoutForm.css
+++ b/src/components/AddShoutoutForm.css
@@ -37,3 +37,10 @@
   height: 20px;
   border: 1px solid rgba(160, 160, 160, 0.927);
 }
+
+@media only screen and (min-width: 768px) {
+  .AddShoutoutForm button {
+    width: 350px;
+    height: 30px;
+  }
+}
